--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,8 @@
 {
   "functions": {
-    "api/disease.py": {
+    "api/*.py": {
       "runtime": "python3.11",
       "maxDuration": 60
     }
-  },
-  "rewrites": [
-    {
-      "source": "/api/disease-python",
-      "destination": "/api/disease"
-    }
-  ]
+  }
 }
